--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "bluebird": "^3.4.6",
-    "botkit": "^0.2.2"
+    "botkit": "^0.2.2",
+    "twit": "^2.2.5"
   }
 }
