--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "waferbot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A waferbot",
   "engines": {
-    "node": "6.2.2"
+    "node": "8.8.0"
   },
   "main": "index.js",
   "scripts": {
@@ -12,13 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "bluebird": "^3.4.6",
-    "botkit": "^0.2.2",
-    "twit": "^2.2.5"
+    "babel": "6.5.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "bluebird": "3.4.6",
+    "botkit": "0.2.2",
+    "twit": "2.2.5"
   }
 }
